unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/CMPL123__MDC_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>MDC Field Mapping</label>
    <nameField>
        <displayFormat>MFM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDC Field Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>