unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Condition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value changed</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>