unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Data_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>