unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Field_API__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>