unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Index__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Index__c</fullName>
        <description>Index to use for Logic</description>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>