unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__MDC_Field_Map_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__MDC_Field_Map_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDC Field Map External Id</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>