unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Parameters__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Parameters__c</fullName>
        <label>Parameters</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>