unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Parent_object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Parent_object__c</fullName>
        <label>Parent object</label>
        <referenceTo>CMPL123__MDC_Trigger__c</referenceTo>
        <relationshipLabel>MDC Field Mapping</relationshipLabel>
        <relationshipName>MDC_Field_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>