unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/fields/CMPL123__Selected_object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Selected_object__c</fullName>
        <label>Selected object</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>