unpackaged/main/default/objects/CMPL123__MDC_Field_Mapping__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Object_Name__c</columns>
        <columns>CMPL123__Field_Name__c</columns>
        <columns>CMPL123__Parent_object__c</columns>
        <columns>CMPL123__Selected_object__c</columns>
        <columns>CMPL123__Condition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>